Remove horizontal button padding, set min-width and margins to fix text centering and button overflow when resizing

--- a/style.css
+++ b/style.css
@@ -104,7 +104,9 @@ body {
     justify-self: center;
     align-self: center;
     width: 80%;
-    padding: 15px;
+    min-width: 45px;;
+    padding: 15px 0 15px 0;
+    margin: 10px;
     border-radius: 15px;
     border: none;
     background-color: rgb(81, 199, 228);
